test-suite/typecheck/pass/interaction_io.first
interaction main() -> Unit {
  println("hello");
  return;
}
