test-suite/typecheck/fail/io_in_pure_function.first
function f() -> Unit {
  println("not allowed");
  return;
}
